--- a/web-server/public/about.html
+++ b/web-server/public/about.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Out and...</title>
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
   <h1>It's ABOUT time, y'all.</h1>
+  <img src="/img/hackermans.jpeg" />
 
 </body>
 
