--- a/web-server/public/index.html
+++ b/web-server/public/index.html
@@ -4,6 +4,8 @@
 
 <head>
   <title>Bob Newhart's Big Feet</title>
+  <link rel="stylesheet" href="/css/styles.css">
+  <script src="/js/app.js"></script>
 </head>
 
 <body>
